# def

./: .gitignore  ConvBase.py  Dockerfile  INSTALL.md  ParameterizedPointModel.py  PatchBase.py  README.md  TransformsBase.py  Untitled.ipynb  build_docker.sh  build_ops.sh  check_pyaabb.ipynb  data.py  dataset.py  env.sh  matrix_torch.py  read_data_voronoi.py  requirements.txt  run_docker.sh  run_inference.sbatch.sh  run_singularity.sh  sampling.py  segmentation_model.py  setup.py  sharp_features_patch_statistics_main.ipynb  submit.sh  train.py  train_net.py  train_sharp.py  transformer.py  view.py  visualization.py  voronoi_1.cpp
CGAL/: Dockerfile
Pytorch_Geometric/: DGCNN_VIS.ipynb  Dataset_vis.ipynb  SharpfData.py  dgcnn_segmentation.py
configs/: config.yaml  optimizer.py  resolvers.py  scheduler.py  trainer.py  trainer_conf.py
contrib/: README.md
docker/: Dockerfile  README.md  build_docker.sh  build_singularity.sh  requirements.txt  run_docker.sh  run_singularity.sh
docs/: bib.bib  fusion.md  inference.md  install.md  parametric.md  ready_predictions.md  real_data.md  synthetic_data.md  training.md
notebooks/: README.md  annotate_whole_images.ipynb  annotate_whole_models-Copy1.ipynb  annotate_whole_models.ipynb  annotation_images.ipynb  annotation_images_real_world.ipynb  annotation_perf.ipynb  annotation_test-meshplot.ipynb  annotation_test.ipynb  camera_pose.ipynb  challenges-plot.ipynb  check_annotation_dir_dist_mismatch.ipynb  check_annotation_noisy.ipynb  check_dataset.ipynb  check_pyaabb.ipynb  compute_metrics.ipynb  computed_metrics_from_zhores.ipynb  crop_patch-Copy1.ipynb  crop_patch.ipynb  dataloading-Copy1.ipynb  dataloading.ipynb  images_whole_combine_predictions_real.ipynb  instantiate_model.ipynb  match_realworld_synth_data.ipynb  max_bb_size.ipynb  metrics.ipynb  normal_maps_example.ipynb  normals_estimation.ipynb  (+13 more)
notebooks/pythonaabb/: CMakeLists.txt
(+1073 files in other folders)
